tests/res/narrowing/member_access_nullable.say
// Member access on an un-narrowed nullable is rejected.
say h?;
h.x; // error: 'h' may be null; narrow it before use
